# libnpy

./: CMakeLists.txt
cmake/: prevent_build_in_source.cmake
tests/: CMakeLists.txt
